Work for #3381: fix runExpression description overflow (#3383)
* Work for #3381: fix runExpression description overflow

* Update vrt screenshot

* Remove .debug()

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-question.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-question.scss
@@ -30,6 +30,7 @@
   font-size: calcSize(2);
   color: $foreground;
   padding-bottom: calcSize(2);
+  white-space: normal;
 }
 .spg-row-narrow__question {
   margin-top: calcSize(-2);
